--- a/Obi/Obi/messages.resx
+++ b/Obi/Obi/messages.resx
@@ -1315,4 +1315,7 @@ Error text: {1}</value>
   <data name="Player_TryAgain" xml:space="preserve">
     <value>Please try again... {0} {1}</value>
   </data>
+  <data name="Metadata_InvalidDateFormat" xml:space="preserve">
+    <value>Invalid date format! Recommended format is YYYY-MM-DD.</value>
+  </data>
 </root>
