--- a/trunk/Obi/Obi/ObiForm.resx
+++ b/trunk/Obi/Obi/ObiForm.resx
@@ -525,6 +525,21 @@
   <data name="mWrappingInContentViewToolStripMenuItem.Text" xml:space="preserve">
     <value>&amp;Wrapping in content view</value>
   </data>
+  <data name="mShowSingleSectionToolStripItem.AccessibleName" xml:space="preserve">
+    <value>Show single section in contents view F5</value>
+  </data>
+  <data name="mShowSingleSectionToolStripItem.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
+    <value>F5</value>
+  </data>
+  <data name="mShowSingleSectionToolStripItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>277, 22</value>
+  </data>
+  <data name="mShowSingleSectionToolStripItem.Text" xml:space="preserve">
+    <value>Show single section in content view</value>
+  </data>
+  <data name="mShowSingleSectionToolStripItem.Visible" type="System.Boolean, mscorlib">
+    <value>False</value>
+  </data>
   <data name="toolStripSeparator10.Size" type="System.Drawing.Size, System.Drawing">
     <value>274, 6</value>
   </data>
@@ -1546,7 +1561,7 @@
     <value>mProjectView</value>
   </data>
   <data name="&gt;&gt;mProjectView.Type" xml:space="preserve">
-    <value>Obi.ProjectView.ProjectView, Obi, Version=1.0.0.21290, Culture=neutral, PublicKeyToken=null</value>
+    <value>Obi.ProjectView.ProjectView, Obi, Version=1.0.0.28035, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;mProjectView.Parent" xml:space="preserve">
     <value>$this</value>
@@ -2072,6 +2087,12 @@
     <value>mWrappingInContentViewToolStripMenuItem</value>
   </data>
   <data name="&gt;&gt;mWrappingInContentViewToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;mShowSingleSectionToolStripItem.Name" xml:space="preserve">
+    <value>mShowSingleSectionToolStripItem</value>
+  </data>
+  <data name="&gt;&gt;mShowSingleSectionToolStripItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;toolStripSeparator10.Name" xml:space="preserve">
